k8s/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: color-palette
  namespace: color-palette
spec:
  type: ClusterIP
  selector:
    app: color-palette
  ports:
  - port: 80
    targetPort: 8080
